--- a/src/assets/stylesheets/dashboard.css
+++ b/src/assets/stylesheets/dashboard.css
@@ -386,6 +386,10 @@ code {
   font-size: 16px !important;
 }
 
+.font-13{
+  font-size: 13px !important;
+}
+
 .font-size-35{
   font-size: 35px !important;
 }
