--- a/src/assets/stylesheets/dashboard.css
+++ b/src/assets/stylesheets/dashboard.css
@@ -64,7 +64,7 @@ code {
 }
 
 .main-container .content .footer{
-  margin: 40px;
+  margin: 80px;
   text-align: right;
 }
 
@@ -424,4 +424,69 @@ input[id^="courseInput"]::-webkit-input-placeholder {
 
 input[id^="courseInput2"]::-webkit-input-placeholder { 
   color: var(--primary-color) !important;
+}
+
+.grading-field{
+  display: flex;
+  margin-bottom: 24px;
+}
+
+.grading-field .grading-field-label, 
+.grading-field .grading-field-value, 
+.grading-field .grading-field-button{
+  flex: 1;
+  padding: 12px;
+  text-align: center;
+} 
+
+.grading-field .grading-field-label{
+  border: 1px solid var(--primary-color);
+  font-weight: bold;
+  color: var(--primary-color)
+}
+.grading-field .grading-field-value{
+  background-color: #F9F9F9;
+}
+
+.grading-field .grading-field-value input{
+  border: 1px solid #F9F9F9 !important;
+  text-align: center;
+  background-color: #f9f9f9;
+  width: 80px
+}
+
+.grading-field .grading-field-value input:focus{
+  outline: 1px #f9f9f9 !important;
+  border: 1px solid #f9f9f9 !important;
+}
+
+.grading-field .grading-field-label input{
+  border: 1px solid white !important;
+  text-align: center;
+  background-color: white;
+  font-weight: bold;
+  color: var(--primary-color);
+  width: 100%
+}
+
+.grading-field .grading-field-label input:focus{
+  outline: 1px white !important;
+  border: 1px solid white !important;
+}
+
+
+.grading-field .grading-field-button{
+  cursor: pointer;
+  border: 1px solid var(--primary-color);
+  font-weight: bold;
+  color: white;
+  background-color: var(--primary-color);
+}
+
+.rt-thead.-filters .rt-tr .rt-th:last-child input{
+  display: none
+}
+
+.rt-td{
+  padding: 12px 12px !important;
 }
