--- a/src/assets/stylesheets/index.css
+++ b/src/assets/stylesheets/index.css
@@ -144,6 +144,11 @@ background-color: var(--primary-color) !important;
 border:1px solid var(--primary-color) !important;
 }
 
+.tficolorbg-button:hover{
+  background-color: var(--primary-color) !important;
+  opacity: 0.7 !important;
+}
+
 .btn-filter{
   background-color: var(--primary-color) !important;
   border:1px solid var(--primary-color) !important;
