--- a/src/assets/stylesheets/index.css
+++ b/src/assets/stylesheets/index.css
@@ -1105,16 +1105,23 @@ border-top-right-radius: 0px !important;
   font-size: 36px!important;
 }
 
+.font-view-analysis-header-exam{
+  color: #707070;
+  font-size: 24px!important;
+}
+
 .font-exam-analysis-content-24 {
   /* color: var(--primary-color)!important; */
   color: #707070;
-  font-size: 24px!important;
+  font-size: 18px!important;
+  display: flex !important;
 }
 
 .font-exam-analysis-content-24-tfi {
   /* color: var(--primary-color)!important; */
   color:var(--primary-color);
   font-size: 24px!important;
+  display: flex !important;
 }
 
 .class-container{
