--- a/src/assets/stylesheets/index.css
+++ b/src/assets/stylesheets/index.css
@@ -1017,6 +1017,12 @@ border-top-right-radius: 0px !important;
   font-size: 18px!important;
   text-decoration: none!important
 }
+
+.btn-create-class :hover{
+  color: var(--primary-color) !important;
+  opacity: 0.7 !important;
+}
+
 .btn-create-discussion{
   color: var(--primary-color)!important;
   font-size: 18px!important;
@@ -1535,6 +1541,11 @@ input::-webkit-inner-spin-button {
 .dash-view-all a{
   color: var(--primary-color) !important;
   text-decoration: none !important;
+}
+
+.dash-view-all a:hover{
+  color: var(--primary-color) !important;
+  opacity: 0.7 !important;
 }
 
 .dash-content {
