--- a/src/assets/stylesheets/index.css
+++ b/src/assets/stylesheets/index.css
@@ -1523,3 +1523,11 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
+.header-analysis-card{
+  border: 1px solid #EE9337 !important;
+  padding: 20px 30px;
+  border-radius: 10px;
+  color: #E5E5E5;
+  background-color: var(--primary-color) !important;
+}
