--- a/src/assets/stylesheets/index.css
+++ b/src/assets/stylesheets/index.css
@@ -1531,3 +1531,26 @@ input::-webkit-inner-spin-button {
   color: #E5E5E5;
   background-color: var(--primary-color) !important;
 }
+
+.header-frequency-card{
+  font-size: 20px;
+  color: #E5E5E5;
+  background-color: var(--primary-color) !important;
+}
+
+.font-exam-frequency-content{
+  color:var(--primary-color) !important;
+  text-decoration-color: #EE9337 !important;
+  font-size: 24px!important;
+  display: flex !important;
+}
+
+.retake-btn{
+  background-color: var(--primary-color) !important;
+  font-size: 12px!important;
+}
+
+.retake-btn:hover{
+  background-color: var(--primary-color) !important;
+  opacity: 0.7 !important;
+}
