Finalize static zoom

--- a/src/assets/stylesheets/dashboard.css
+++ b/src/assets/stylesheets/dashboard.css
@@ -63,7 +63,7 @@ code {
   height: 100vh !important;
 }
 
-.main-container .content .footer{
+.main-container .content .lms-footer{
   margin: 80px;
   text-align: right;
 }
