--- a/src/assets/stylesheets/dashboard.css
+++ b/src/assets/stylesheets/dashboard.css
@@ -302,6 +302,10 @@ code {
   padding: 10px;
 }
 
+.active-nav-item:hover{
+  opacity: 0.7;
+}
+
 .nav-item{
   color: gray !important;
   border-radius: 10px !important;
@@ -412,10 +416,20 @@ code {
   padding-left: 15px;
 }
 
+.file-name{
+  color: var(--primary-color);
+  cursor: pointer;
+  font-size: 25px;
+}
+
 .colored-class{
   color: var(--primary-color);
   cursor: pointer;
   font-size: 25px;
+}
+
+.colored-class:hover{
+  opacity: 0.7;
 }
 
 .font-size-22{
