--- a/src/assets/stylesheets/index.css
+++ b/src/assets/stylesheets/index.css
@@ -255,6 +255,11 @@ color:#BCBCBC !important;
   padding-left: 10px !important;
   display: inline-flex;
 }
+
+.file-upload-content:hover{
+  opacity: 0.7;
+}
+
 .fileupload{
   padding-top: 12px;
   padding-left: 12px;
@@ -1053,6 +1058,9 @@ border-top-right-radius: 0px !important;
   color: var(--primary-color)!important;
   font-size: 18px!important;
   text-decoration: none!important
+}
+.btn-create-discussion:hover{
+  opacity: 0.7;
 }
 .btn-create-assignment{
   color: var(--primary-color)!important;
