--- a/src/assets/stylesheets/dashboard.css
+++ b/src/assets/stylesheets/dashboard.css
@@ -544,3 +544,7 @@ input[id^="courseInput2"]::-webkit-input-placeholder {
 .calendar-view{
   height: 900px;
 }
+
+.file-library-btn:hover{
+  opacity: 0.7;
+}
