--- a/src/assets/stylesheets/dashboard.css
+++ b/src/assets/stylesheets/dashboard.css
@@ -562,3 +562,10 @@ input[id^="courseInput2"]::-webkit-input-placeholder {
 .file-library-btn:hover{
   opacity: 0.7;
 }
+/* 
+.fb_dialog_content iframe{
+  bottom: 
+
+.fb_iframe_widget iframe{
+  bottom: 10vh !important;
+} */
