--- a/src/assets/stylesheets/dashboard.css
+++ b/src/assets/stylesheets/dashboard.css
@@ -280,7 +280,7 @@ code {
 }
 
 .capitalize {
-  text-transform: capitalize;
+  text-transform: capitalize !important;
 }
 
 .bread-crumbs-position{
@@ -561,4 +561,8 @@ input[id^="courseInput2"]::-webkit-input-placeholder {
 
 .file-library-btn:hover{
   opacity: 0.7;
+}
+
+.hand{
+  cursor: pointer;
 }
