Exclude font awesome

--- a/src/assets/stylesheets/dashboard.css
+++ b/src/assets/stylesheets/dashboard.css
@@ -1,5 +1,5 @@
 
-* {
+*:not(.fas, .far, .fa) {
   font-family: "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans",
     "Helvetica Neue", Arial, sans-serif !important;
 } 
