--- a/src/assets/stylesheets/index.css
+++ b/src/assets/stylesheets/index.css
@@ -867,6 +867,11 @@ border-top-right-radius: 0px !important;
   border-color: var(--primary-color) !important;
 }
 
+.btn-primary:hover{
+  background-color: var(--primary-color) !important;
+  opacity: 0.8
+}
+
 .btn-auth{
   background-color: var(--primary-color) !important;
   border-color: var(--primary-color) !important;
