--- a/src/assets/stylesheets/dashboard.css
+++ b/src/assets/stylesheets/dashboard.css
@@ -645,3 +645,21 @@ input[id^="courseInput2"]::-webkit-input-placeholder {
 .profile-container{
 margin: 0 auto;
 }
+
+.fd-row{
+  flex-direction: row !important;
+  align-items: center;
+}
+
+.m-0-dashboard{
+  margin: 0%;
+  margin-bottom: .5rem !important;
+}
+
+.ml-3{
+  margin-left: 10px !important;
+}
+
+.pt-10{
+  padding-top: 10px !important;
+}
