--- a/src/assets/stylesheets/index.css
+++ b/src/assets/stylesheets/index.css
@@ -130,6 +130,11 @@ opacity: 1;
 border:0px !important;
 }
 
+
+.modal-adjust {
+  padding-left: 10px !important;
+}
+
 .modal-content {
 border:0px transparent !important;
 box-shadow: 0px 3px 6px #00000029;
