--- a/src/assets/stylesheets/dashboard.css
+++ b/src/assets/stylesheets/dashboard.css
@@ -667,3 +667,12 @@ margin: 0 auto;
 .mb-3{
   margin-bottom: 0px !important;
 }
+
+.ai-c{
+  align-items: center !important;
+}
+
+.ph-3{
+  margin-left: 5px !important;
+  margin-right:  5px !important;
+}
