--- a/src/assets/stylesheets/index.css
+++ b/src/assets/stylesheets/index.css
@@ -488,7 +488,7 @@ border-top-right-radius: 0px !important;
   border-radius: 10px 10px 0px 0px!important;
   box-shadow:1px 2px 5px 1px #eeeeee ;
   color: #BCBCBC;
-  height: 7.5rem;
+  height: 10.5rem;
 }
 
 .class-card-font-color{
@@ -1758,4 +1758,8 @@ input::-webkit-inner-spin-button {
 .class-links:hover{
   color: var(--primary-color) !important;
   opacity: 0.7 !important;
+}
+
+.font-color{
+  color: var(--primary-color) !important;
 }
