--- a/src/assets/stylesheets/index.css
+++ b/src/assets/stylesheets/index.css
@@ -810,6 +810,7 @@ border-top-right-radius: 0px !important;
   padding: 50px;
   box-shadow: 0px 3px 6px #00000029;
   border-radius: 10px;
+  height: 80vh;
 }
 
 .login-container .title{
