Able to change loading indicator and theme color

--- a/src/assets/stylesheets/index.css
+++ b/src/assets/stylesheets/index.css
@@ -828,8 +828,8 @@ border-top-right-radius: 0px !important;
   margin-top: 0 !important;
 }
 
-.color-blue-green{
-  color: #1BBEAE
+.orange{
+  color: #EE9337 !important;
 }
 
 .custom-label{
