--- a/src/assets/stylesheets/dashboard.css
+++ b/src/assets/stylesheets/dashboard.css
@@ -655,7 +655,7 @@ margin: 0 auto;
 
 .fd-row{
   flex-direction: row !important;
-  align-items: center;
+  align-items: center !important;
 }
 
 .m-0-dashboard{
