--- a/src/assets/stylesheets/index.css
+++ b/src/assets/stylesheets/index.css
@@ -1770,3 +1770,11 @@ input::-webkit-inner-spin-button {
 .font-color{
   color: var(--primary-color) !important;
 }
+
+.fd-row{
+  flex-direction: row !important;
+  align-items: center !important;
+}
+.row{
+  flex-direction: row !important;
+}
