Change color of text and profile icon base on school theme

--- a/src/assets/stylesheets/index.css
+++ b/src/assets/stylesheets/index.css
@@ -1085,10 +1085,10 @@ border-top-right-radius: 0px !important;
   text-decoration: none!important
 }
 .btn-like{
-  /* color: var(--primary-color)!important; */
-  color: #EE9337!important;
+  color: var(--primary-color)!important;
+  /* color: #EE9337!important; */
   font-size: 16px!important;
-  text-decoration: none!important
+  text-decoration: none!important;
 }
 .btn-student-portfolio{
   color: #7D7D7D!important;
