--- a/src/assets/stylesheets/index.css
+++ b/src/assets/stylesheets/index.css
@@ -1086,7 +1086,7 @@ border-top-right-radius: 0px !important;
 }
 .btn-like{
   /* color: var(--primary-color)!important; */
-  color: #EE9337!important;
+  color: var(--primary-color)!important;
   font-size: 16px!important;
   text-decoration: none!important
 }
