--- a/src/assets/stylesheets/dashboard.css
+++ b/src/assets/stylesheets/dashboard.css
@@ -1,7 +1,7 @@
 
 *:not(.fas, .far, .fa) {
   font-family: "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans",
-    "Helvetica Neue", Arial, sans-serif !important;
+    "Helvetica Neue", Arial, sans-serif, Garamond !important;
 } 
 
 code {
