Change color of progress bar and unconsider checkbox

--- a/src/assets/stylesheets/dashboard.css
+++ b/src/assets/stylesheets/dashboard.css
@@ -693,3 +693,12 @@ margin: 0 auto;
 .fr-popup{
   z-index: 99999 !important;
 }
+
+.form-check-input:checked{
+  background-color: var(--primary-color) !important;
+} 
+
+.progress-bar {
+  background-color: var(--primary-color) !important;
+}
+
