fix width sidenav for report

--- a/src/assets/stylesheets/index.css
+++ b/src/assets/stylesheets/index.css
@@ -379,6 +379,7 @@ background-color:var(--primary-color) !important;
 border: 0 !important;
 color: white !important;
 border-radius: 10px 10px 10px 10px !important;
+width: 150px !important;
 
 }
 
