--- a/src/assets/stylesheets/index.css
+++ b/src/assets/stylesheets/index.css
@@ -1,13 +1,10 @@
-
-* {
-
+/* * {
   font-family: "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans",
-  
+  Garamond,serif,
   "Helvetica Neue", Arial, sans-serif;
-  
-  }
+  } */
 
-span, input::placeholder {
+input::placeholder {
   font-family: "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans",
     "Helvetica Neue", Arial, sans-serif !important;
 }
