Remove all times new roman font

--- a/src/assets/stylesheets/dashboard.css
+++ b/src/assets/stylesheets/dashboard.css
@@ -117,7 +117,7 @@ code {
 .header .school-year-container span{
   color: var(--bolder);
   text-align: left;
-  font: normal normal normal 20px/27px Segoe UI;
+  /* font: normal normal normal 20px/27px Segoe UI; */
   letter-spacing: 0px;
   color: #707070;
 }
@@ -194,11 +194,11 @@ code {
 .profile-dropdown-container .user-header .user-name-container .user-name{
   margin: 0;
   color: #707070;
-  font: normal normal normal 24px/32px Segoe UI;
+  /* font: normal normal normal 24px/32px Segoe UI; */
 }
 
 .profile-dropdown-container .user-header .user-name-container a{
-  font: normal normal normal 16px/21px Segoe UI;
+  /* font: normal normal normal 16px/21px Segoe UI; */
   letter-spacing: 0px;
   color: var(--primary-color);
   text-decoration: none !important;
@@ -214,7 +214,7 @@ code {
   text-decoration: none !important;
   align-items: center;
   color: #707070;
-  font: normal normal normal 20px/27px Segoe UI;
+  /* font: normal normal normal 20px/27px Segoe UI; */
   letter-spacing: 0px;
   color: #707070;
 }
@@ -240,14 +240,14 @@ code {
 
 .profile-dropdown-container .profile-dropdown-links .feedback-link .feedback-texts .title{
   margin: 0;
-  font: normal normal bold 12px/16px Segoe UI;
+  /* font: normal normal bold 12px/16px Segoe UI; */
   letter-spacing: 0px;
   color: #707070;
 }
 
 .profile-dropdown-container .profile-dropdown-links .feedback-link .feedback-texts .sub-title{
   margin: 0;
-  font: normal normal normal 12px/16px Segoe UI;
+  /* font: normal normal normal 12px/16px Segoe UI; */
   letter-spacing: 0px;
   color: #707070;
 }
